syntax = "proto3";
package marketdata;
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "MarketGateway.Contracts";

enum BarGranularity { BAR_G_UNSPECIFIED = 0; M1 = 1; M5 = 2; H1 = 3; D1 = 4; W1 = 5; }
enum PriceAdjustment { ADJ_UNSPECIFIED = 0; NONE = 1; SPLITS = 2; SPLITS_DIVS = 3; }

message Identifier {
  string symbol = 1;
  google.protobuf.StringValue exchange = 2;
  google.protobuf.StringValue asset_type = 3;
}

message TimeRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end   = 2;
}
message RequestContext {
  google.protobuf.StringValue client_id = 1;
  google.protobuf.StringValue request_id = 2;
}

message QueryOptions {
  repeated string preferred_vendors = 1;
  map<string, string> vendor_hints = 2;
}

message ResultMeta {
  string vendor = 1;
  google.protobuf.Timestamp asof = 2;
  google.protobuf.StringValue currency = 3;
  google.protobuf.StringValue etag = 4; 
}